--- a/about.html
+++ b/about.html
@@ -4,14 +4,16 @@
   <title>534 Project</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.7/journal/bootstrap.min.css" />
+  <link href="https://cdn.muicss.com/mui-0.9.6/css/mui.min.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.muicss.com/mui-0.9.6/js/mui.min.js"></script>
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-  <nav class="navbar navbar-inverse">
-  <div class="container-fluid">
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
         <span class="icon-bar"></span>
@@ -24,23 +26,36 @@
       <ul class="nav navbar-nav">
         <li><a href="./index.html">Home</a></li>
         <li class="active"><a href="#">About</a></li>
-        <li><a href="#">Projects</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="./project.html">Our Project</a></li>
       </ul>
     </div>
   </div>
-</nav>
-  <div class="container-fluid text-center middle">
-  <div class="row content">
-    <div class="col-sm-2 sidenav">
-    </div>
-    <div class="col-sm-8 text-center">
-      <h1>About the team</h1>
-      <hr>
-
-    </div>
-    <div class="col-sm-2 sidenav">
-    </div>
+  </nav>
+  <div class="container-fluid about">
+    <div class="col-lg-8 col-lg-offset-2 mui-panel">
+      <h1 class="title">About the team</h1>
+      <hr />
+      <div class="member col-lg-6 col-lg-offset-3">
+        <img src="profile1.jpg" class="avatar" />
+        <h2 class="member-name">Wangtao Lian</h2>
+        <p class="member-desc">
+          Hi! I am an international student from China studying at University of Wisconsin Madison. As a Computer Science major, I love web development as well as mobile development. Check out my personal website here!
+        </p>
+      </div>
+      <div class="member col-lg-6 col-lg-offset-3">
+        <img src="profile1.jpg" class="avatar" />
+        <h2 class="member-name">Wangtao Lian</h2>
+        <p class="member-desc">
+          Hi! I am an international student from China studying at University of Wisconsin Madison. As a Computer Science major, I love web development as well as mobile development. Check out my personal website here!
+        </p>
+      </div>
+      <div class="member col-lg-6 col-lg-offset-3">
+        <img src="profile1.jpg" class="avatar" />
+        <h2 class="member-name">Wangtao Lian</h2>
+        <p class="member-desc">
+          Hi! I am an international student from China studying at University of Wisconsin Madison. As a Computer Science major, I love web development as well as mobile development. Check out my personal website here!
+        </p>
+      </div>
   </div>
 </div>
   <footer class="container-fluid text-center">
