--- a/project.html
+++ b/project.html
@@ -1,4 +1,3 @@
-<!-- URL: https://lianwangtao.github.io/534ProjectWebsite/ -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,21 +25,18 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
+        <li><a href="./index.html">Home</a></li>
         <li><a href="./about.html">About</a></li>
-        <li><a href="./project.html">Our Project</a></li>
+        <li class="active"><a href="#">Our Project</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
-<div class="container-fluid home">
+<div class="container-fluid about">
   <div class="col-lg-6 col-lg-offset-3 mui-panel">
-    <div class="jumbotron">
-      <h1 style="margin-bottom: 15px">Welcome!</h1>
-      <p>Our project aims to generate four various artisic styles images including cartoonified picture, contour drawing, pencil sketches in black and white and in colors.</p>
-    </div>
-    <a href="./project.html"><button class="mui-btn mui-btn--primary">Learn More</button></a>
+    <h1 class="title">Project Overview</h1>
+    <hr />
   </div>
 </div>
 
