--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-  <nav class="navbar navbar-default">
+  <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -49,7 +49,7 @@
           Hi! I am an international student from China studying at University of Wisconsin Madison. As a Computer Science major, I love web development as well as mobile development. Check out my personal website here!
         </p>
       </div>
-      <div class="member col-lg-6 col-lg-offset-3">
+      <div class="member col-lg-6 col-lg-offset-3" style="margin-bottom: 50px;">
         <img src="profile1.jpg" class="avatar" />
         <h2 class="member-name">Wangtao Lian</h2>
         <p class="member-desc">
@@ -58,7 +58,7 @@
       </div>
   </div>
 </div>
-  <footer class="container-fluid text-center">
+  <footer class="text-center">
   <p>&copy;2016 Wangtao Lian, Rulan Zheng &amp; Ruiqi Yin</p>
 </footer>
 </body>
