--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -37,7 +37,7 @@
 <div class="container-fluid home">
   <div class="col-lg-6 col-lg-offset-3 mui-panel">
     <div class="jumbotron">
-      <h1 style="margin-bottom: 15px">Welcome!</h1>
+      <h1 style="margin-bottom: 30px;">Welcome!</h1>
       <p>Our project aims to generate four various artisic styles images including cartoonified picture, contour drawing, pencil sketches in black and white and in colors.</p>
     </div>
     <a href="./project.html"><button class="mui-btn mui-btn--primary">Learn More</button></a>
