--- a/project.html
+++ b/project.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -40,7 +40,7 @@
   </div>
 </div>
 
-<footer class="container-fluid text-center">
+<footer class="text-center">
   <p>&copy;2016 Wangtao Lian, Rulan Zheng &amp; Ruiqi Yin</p>
 </footer>
 
