--- a/project.html
+++ b/project.html
@@ -89,15 +89,15 @@
     </a>
   </div>
 
-  <h2>Abstract</h2>
+  <h2 class="project-title">Abstract</h2>
   <hr />
-  <p>
+  <p class="project-desc">
     Phones and camera have become accessible in the modern era; hence, taking a photo has become common to public. Nowadays, performing visual transformations on an image is already common to anyone who has a smartphone. Some artists have used these snapshots as inspiration to create different art forms; however, not everyone who wants to convert images to aesthetic outcome has the necessary skills. We have created a program to resolve this issue by asking the user to choose the artistic styles they want. Our project aims to  generate 4 styles to the input image, and the output image could be cartoonified picture, contour drawing, pencil sketches in black & white and in colors.
   </p>
 
-  <h2>Motivation and Problem Statement</h2>
+  <h2 class="project-title">Motivation and Problem Statement</h2>
   <hr />
-  <p>
+  <p class="project-desc">
     In class, professor introduced bilateral filtering to us, and it sparked our interests in “artistic image processing”. We think it is a waste of time and energy for people to create paintings that computer programs can generate easily. We related techniques and knowledge we had learned in class such as histogram equalization, edge detection and texture transferring to our project. We have also found some limitations of certain filters after getting our results, so we used some noise reduction methods to adjust our output images. An example of this can be viewed as our contour drawing result.
   </p>
 
