Update about page info

--- a/about.html
+++ b/about.html
@@ -43,10 +43,10 @@
         </p>
       </div>
       <div class="member col-lg-6 col-lg-offset-3">
-        <img src="profile1.jpg" class="avatar" />
-        <h2 class="member-name">Wangtao Lian</h2>
+        <img src="profile2.jpg" class="avatar" />
+        <h2 class="member-name">Rulan Zheng</h2>
         <p class="member-desc">
-          Hi! I am an international student from China studying at University of Wisconsin Madison. As a Computer Science major, I love web development as well as mobile development. Check out my personal website here!
+          Hey there! My name is Rulan Zheng and am studying computer science at UW Madison. I enjoy programming, problem solving and designing. I look forward to becoming a software engineer or UI designer.
         </p>
       </div>
       <div class="member col-lg-6 col-lg-offset-3" style="margin-bottom: 50px;">
