add ruiqi personal des

--- a/about.html
+++ b/about.html
@@ -50,10 +50,10 @@
         </p>
       </div>
       <div class="member col-lg-6 col-lg-offset-3" style="margin-bottom: 50px;">
-        <img src="profile1.jpg" class="avatar" />
-        <h2 class="member-name">Wangtao Lian</h2>
+        <img src="profile3.jpg" class="avatar" />
+        <h2 class="member-name">Ruiqi Yin</h2>
         <p class="member-desc">
-          Hi! I am an international student from China studying at University of Wisconsin Madison. As a Computer Science major, I love web development as well as mobile development. Check out my personal website here!
+          Hello! I am Ruiqi Yin. I am also a computer science major student, who also has a passion for studio art. I am looking for a way of combining both arts and computer science in my future career. To learn more about my projects and arts, click here.
         </p>
       </div>
   </div>
